...
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/linear_layout_apps"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:orientation="horizontal"
...
                        <Button
                            android:id="@+id/appUsageButton"
                            android:layout_width="0dp"
                            android:layout_height="32dp"
                            android:layout_weight="1"
                            android:background="@drawable/round_button_background"
                            android:text="Keisti"
                            android:textAllCaps="false"
                            android:textColor="@android:color/black"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>
...
